--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
   "theme_color": "#0f1221",
   "description": "Flashcards, quizzes e simuladores para dominar Imuno.",
   "icons": [
-    { "src": "icons/icon.svg", "sizes": "any", "type": "image/svg+xml", "purpose": "any" },
-    { "src": "icons/icon-maskable.svg", "sizes": "any", "type": "image/svg+xml", "purpose": "any maskable" }
+    { "src": "icon.svg", "sizes": "any", "type": "image/svg+xml", "purpose": "any" },
+    { "src": "icon-maskable.svg", "sizes": "any", "type": "image/svg+xml", "purpose": "any maskable" }
   ]
 }
